// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconItalic /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconItalic /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconItalic /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconItalic /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconItalic /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconItalic /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconItalic /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconItalic /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconItalic /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconItalic /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconItalic /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconItalic /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M147.7 229.7l-2.2 7H53.6l2.2-7h5c6.6 0 12.2-1.2 16.8-3.6 4.6-2.4 7.7-5.2 9.4-8.3 1.7-3.2 4.1-10.1 7.3-20.8l41.9-138.4c3.3-10.7 5-17.4 5-20 0-7.7-6.9-11.5-20.7-11.5l-5.8-1 2.2-7h85.6l-2.2 7h-4.5c-5.1 0-9.8.9-14 2.7-4.2 1.8-7.1 4.3-8.9 7.5-1.8 3.2-4.7 11.5-8.7 24.9l-40.6 133.3c-3.1 10.2-4.7 16.6-4.7 19.2 0 5.2 2.3 9.1 6.8 11.5 4.5 2.4 9.8 3.6 15.6 3.6l6.4.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconItalic /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
